# DataHack_3_Loading

./: Pose_Estimation.ipynb  Pose_Estimation.py
MobileApp/: App.tsx  package.json  tailwind.config.js
MobileApp/Components/: Input.tsx
MobileApp/Screens/: AppNavigationScreen.tsx  DietScreen.tsx  ExcerisesScreen.tsx  HomeScreen.tsx  LoginScreen.tsx
backend/: pyproject.toml
backend/backend/: gymdata.csv  recommendation.py  recommendation_func.py
