[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sidd-R <siddhant.rao@spit.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiortc = "^1.5.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
